# qbit

./: .travis.yml  CMakeLists.txt
cmake/Modules/: FindLibtorrentRasterbar.cmake  FindQtSingleApplication.cmake  FindSystemd.cmake  MacroQbtCompilerSettings.cmake  bundle.cmake
src/: CMakeLists.txt  config.h.cmakein  icons.qrc
src/app/: CMakeLists.txt  application.cpp  application.h  cmdoptions.h  main.cpp  upgrade.h
src/app/qtlocalpeer/: qtlocalpeer.cpp
src/app/qtsingleapplication/: CMakeLists.txt
src/base/: CMakeLists.txt  fwd.h  iconprovider.cpp  iconprovider.h  logger.cpp  logger.h  preferences.cpp  preferences.h  range.h  settingvalue.h  types.h
src/base/bittorrent/: infohash.cpp  peerinfo.cpp  peerinfo.h  session.cpp  session.h  torrentcreatorthread.cpp  torrenthandle.cpp  torrenthandle.h  torrentinfo.cpp  torrentinfo.h  trackerentry.cpp
src/base/bittorrent/private/: filterparserthread.cpp  filterparserthread.h  index.h
src/base/dbus/: test.cpp  test.h
src/base/http/: httperror.cpp  httperror.h
src/base/net/: dnsupdater.cpp  downloadmanager.cpp  portforwarder.cpp  portforwarder.h
src/base/net/private/: geoipdatabase.cpp  geoipdatabase.h
src/base/rss/: rss_feed.cpp  rss_session.cpp
src/base/utils/: fs.cpp  gzip.cpp  misc.cpp  misc.h
src/gui/: CMakeLists.txt  about_imp.h  aboutdialog.cpp  aboutdialog.h  addnewtorrentdialog.cpp  advancedsettings.cpp  advancedsettings.h  ant-collapsed-adv.ui  ant-collapsed-simple.ui  ant-expanded-adv.ui  ant-expanded-simple.ui  executionlog.cpp  executionlogwidget.cpp  guiiconprovider.cpp  guiiconprovider.h  loglistwidget.cpp  loglistwidget.h  macutilities.mm  mainwindow.cpp  mainwindow.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  optionsdlg.cpp  optionsdlg.h  optionsdlg.ui  previewlistdelegate.cpp  previewlistdelegate.h  programupdater.cpp  statsdialog.cpp  statusbar.cpp  tagfiltermodel.cpp  torrentcontentmodel.cpp  torrentcontenttreeview.cpp  torrentmodel.cpp  torrentmodel.h  trackerlogin.cpp  transferlistdelegate.cpp  transferlistfilterswidget.cpp  transferlistfilterswidget.h  (+13 more)
src/gui/lineedit/: CMakeLists.txt
src/gui/powermanagement/: CMakeLists.txt
src/gui/properties/: CMakeLists.txt  downloadedpiecesbar.cpp  peerlistwidget.cpp  pieceavailabilitybar.cpp  propertieswidget.cpp  propertieswidget.h  proplistdelegate.cpp  speedplotview.cpp  speedplotview.h  trackerlist.cpp  trackerlistwidget.cpp
src/gui/qtnotify/: CMakeLists.txt
src/gui/rss/: CMakeLists.txt
src/gui/search/: CMakeLists.txt  searchjobwidget.cpp  searchtab.cpp  searchwidget.cpp
src/gui/theme/: colorproviders.cpp  colortheme.cpp  colortheme.h  serializabletheme.cpp  themecommon.cpp  themecommon.h  themeprovider.cpp  themeprovider.h
src/gui/utils/: colorutils.cpp
src/icons/: icons.qrc
src/webui/: webapplication.cpp
src/webui/api/: appcontroller.cpp  searchcontroller.cpp  synccontroller.cpp  torrentscontroller.cpp
src/webui/api/serialize/: serialize_torrent.cpp
src/webui/www/private/: filters.html  index.html
